// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib cos works 1`] = `
Array [
  -0.4157480299472809,
  0.5404837131500244,
  1,
  0.5404837727546692,
  -0.41574785113334656,
]
`;

exports[`lib cos works 2`] = `
Array [
  -0.4161468365471424,
  0.5403023058681398,
  1,
  0.5403023058681398,
  -0.4161468365471424,
]
`;

exports[`lib exp works 1`] = `
Array [
  0.1353352814912796,
  0.3678794503211975,
  1,
  2.7182817459106445,
  7.389056205749512,
]
`;

exports[`lib exp works 2`] = `
Array [
  0.1353352832366127,
  0.36787944117144233,
  1,
  2.718281828459045,
  7.38905609893065,
]
`;

exports[`lib mod floats 1`] = `
Array [
  -0.5,
  -1,
  -0,
  -0.5,
  -1,
  0,
  1,
  0.5,
  0,
  1,
  0.5,
]
`;

exports[`lib mod floats 2`] = `
Array [
  -0.5,
  -1,
  -0,
  -0.5,
  -1,
  0,
  1,
  0.5,
  0,
  1,
  0.5,
]
`;

exports[`lib mod works 1`] = `
Array [
  -2,
  -1,
  -0,
  -2,
  -1,
  0,
  1,
  2,
  0,
  1,
  2,
]
`;

exports[`lib mod works 2`] = `
Array [
  -2,
  -1,
  -0,
  -2,
  -1,
  0,
  1,
  2,
  0,
  1,
  2,
]
`;

exports[`lib pow works 1`] = `
Array [
  25,
  16,
  9,
  4,
  1,
  0,
  1,
  4,
  9,
  16,
  25,
]
`;

exports[`lib pow works 2`] = `
Array [
  25,
  16,
  9,
  4,
  1,
  0,
  1,
  4,
  9,
  16,
  25,
]
`;

exports[`lib sin works 1`] = `
Array [
  -0.9097958207130432,
  -0.8421677947044373,
  0,
  0.8421676158905029,
  0.909795880317688,
]
`;

exports[`lib sin works 2`] = `
Array [
  -0.9092974268256817,
  -0.8414709848078965,
  0,
  0.8414709848078965,
  0.9092974268256817,
]
`;
